[project]
name = "langchain-chaos-middleware"
version = "0.1.5"
description = "Chaos testing middleware for LangChain agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Roy Yu", email = "iroy2000@gmail.com"}
]
keywords = ["langchain", "chaos", "testing", "middleware", "chaos-engineering", "chaos-monkey"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/iroy2000/langchain-chaos-middleware"
Repository = "https://github.com/iroy2000/langchain-chaos-middleware"
Issues = "https://github.com/iroy2000/langchain-chaos-middleware/issues"

[tool.setuptools]
py-modules = ["chaos_middleware"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
